syntax = "proto3";

package grpc;
option java_package = "pers.cyz.bigdatatool.node.grpc.com";
option java_multiple_files = true;

service Connect{
  rpc register(stream RegisterRequest) returns (RegisterResponse);
}

service Serve{
  rpc downloadComponent(stream DownloadComponentRequest) returns (stream DownloadComponentResponse);
  rpc distributeComponent(stream DistributeComponentRequest) returns (stream DistributeComponentResponse);
  rpc deploy(DeployRequest) returns (stream DeployResponse);
}

// Connect
// register
message RegisterRequest {
  string ip = 1;
  string name = 2;
  string status = 3;
}

message RegisterResponse {
  string msg = 1;
}

// Serve
// downloadComponent
message DownloadComponentRequest {
  map<string, string> componentMap = 1;
  string commandType = 2;
}

message DownloadComponentResponse {
  int64 totalSize = 1;
  int64 alreadyDownloadSize = 2;
}

message DistributeComponentRequest {
  string fileName = 1;
  bytes data = 2;
  string msg = 3;
  int64 size = 4;
}

message DistributeComponentResponse {
  string msg = 1;
  int64 totalSize = 2;
  int64 alreadyDistribute = 3;
}

// deploy
message DeployRequest {
  string msg = 1;
  string type = 2;
  string nameNode = 3;
  string secondaryNameNode = 4;
  map<string, string> componentMap = 5;
  map<string, string> nodeMap = 6;
}

message DeployResponse {
  string message = 1;
  string status = 2;
  string step = 3;
}
